# CourseWork

./: CMakeLists.txt  README.md
Components/Client/: CMakeLists.txt  Client.cpp  Client.h  LCClient.cpp  LCClient.h  main.cpp
Components/Client/inc/: AuthorisationWindow.h  AuthorizationWindow.h  Client.h  ConnectionWindow.h  LCClient.h  MainWindow.h  NetworkClient.h
Components/Client/src/: AuthorisationWindow.cpp  AuthorizationWindow.cpp  Client.cpp  ConnectionWindow.cpp  LCClient.cpp  MainWindow.cpp  NetworkClient.cpp
Components/Database/: Dockerfile  buildDatabaseImage.sh  init.sql  startDatabaseContainer.sh
Components/Server/: CMakeLists.txt  Dockerfile  Server.cpp  Server.h  main.cpp
Components/Server/inc/: DatabaseController.h  FileManager.h  Server.h  Shared.h
Components/Server/inc/PacketProcessor/: PacketProcessor.h  Tasks.h
Components/Server/src/: DatabaseController.cpp  FileManager.cpp  Server.cpp
Components/Server/src/PacketProcessor/: PacketProcessor.cpp  Tasks.cpp
